@@ -1,4 +1,6 @@
 Version 0.9.34dev (?? ??? ??)
+  - Patch 483782: Delete users even if they have events and delete those
+    events.
   - MS IIS/PSW workaround: IIS does not allow you to send a cookie and
     a redirect in the same http header, so all redirects are handled
     using html meta tags when IIS is detected.
